--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@mantine/notifications": "^8.2.2",
     "@mui/material": "^7.2.0",
     "@tabler/icons-react": "^3.34.1",
+    "framer-motion": "^12.23.12",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "19.1.0",
     "react-intersection-observer": "^9.16.0",
-    "react-scroll": "^1.9.3"
+    "react-scroll": "^1.9.3",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
